<resources>
    <string name="app_name">Sallefy</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recover_password">"Recover Password"</string>
    <string name="first_name">"First Name"</string>
    <string name="last_name">"Last Name"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="already_have_acct">"Already Have an Account?"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_here">Enter your email here:</string>
    <string name="remember_password">Remember password?</string>
    <string name="username">Username</string>
    <string name="image_logo">image_logo</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_user">User</string>
    <string name="default_track_title">track</string>
    <string name="default_track_author">author</string>
    <string name="default_user_name">name</string>
    <string name="state_wait">Please Wait</string>
    <string name="state_task_in_progress">Uploading the song to the server</string>
    <string name="state_success_title">Success</string>
    <string name="state_task_completed">Completed</string>
    <string name="action_cloudinary">Upload Songs</string>
    <string name="create_song_titulo">Song Name</string>
    <string name="create_song_genre">Song Genre</string>
    <string name="create_song_file">Upload File</string>
    <string name="action_decline">Cancel</string>
    <string name="action_accept">Upload</string>
    <string name="state_error_title">Error</string>
    <string name="state_error_default">error state</string>
    <string name="most_played_songs">Most Played</string>
    <string name="search_for_a_song_user_or_playlist">Search for a song, user, or playlist</string>
    <string name="search_results">Search results :</string>
    <string name="users">Users</string>
    <string name="songs">Songs</string>
    <string name="playlists">PlayLists</string>
    <string name="match_percentage">Match
        Percentage:</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_0">0</string>
    <string name="my_songs">My Songs</string>
    <string name="my_playlists">My Playlists</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="following_lists">Following Playlists</string>
    <string name="recently_added">Recently Added</string>
    <string name="new_playlists">New Playlists</string>
    <string name="popular_playlists">Popular Playlists</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="upload_song">UPLOAD SONG</string>
    <string name="follow">Follow</string>
    <string name="x">X%</string>
    <string name="create">create</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="genre_name">Genre Name</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="make_the_playlist_public">Make the playlist public</string>
    <string name="upload_thumbnail">upload Thumbnail</string>
    <string name="upload_cover">Upload cover</string>
    <string name="description">Description</string>
    <string name="add_songs">add songs</string>
    <string name="select_songs">Select Songs</string>
    <string name="uploaded_songs">Uploaded Songs</string>
    <string name="uploaded_playlists">Uploaded playlists</string>
    <string name="downloaded_songs">Downloaded Songs</string>
    <string name="menu">menu</string>
    <string name="like">like</string>
    <string name="download">download</string>
    <string name="show_more">show more</string>
</resources>
