<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="34sp"
            android:text="@string/action_cloudinary"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,ScrollViewCount">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                style="@style/settings_title"
                android:text="@string/create_song_titulo"/>

            <EditText
                android:id="@+id/create_song_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                style="@style/settings_title"
                android:text="@string/create_song_genre"/>

            <Spinner
                android:id="@+id/create_song_genre"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_song_file"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:padding="5dp"
                android:text="@string/upload_song"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/create_song_file_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_song_image"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:padding="5dp"
                android:text="@string/upload_image"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/create_song_file_image"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>



    </LinearLayout>
        </LinearLayout>
         </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_song_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_background_dark"
                android:text="@string/action_decline"/>


            <Button
                android:id="@+id/create_song_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="15dp"
                android:background="@drawable/button_background"
                android:text="@string/action_accept"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>