<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_background_white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/dialog_state_title"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:text="@string/state_wait"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/dialog_state_subtitle"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/state_task_in_progress"
                android:textSize="20sp" />

            <com.google.android.material.circularreveal.CircularRevealRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/loadingPanel"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="7dp"
                    android:foregroundGravity="center_horizontal"
                    android:indeterminate="true" />

                <Button
                    android:id="@+id/dialog_state_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/action_accept"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </com.google.android.material.circularreveal.CircularRevealRelativeLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>